--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
@@ -35,7 +35,7 @@
     <label style="font-size: 20px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Account")</label>
     <hr/>
 
-    <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+    <div class="grid-estructura" style="margin-top: 30px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
         <button @onclick="@(e => MostrarCorreo(e))" class="boton-pestañas">
             <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
                 <i class="fa-solid fa-share" style="font-size: 22px;"></i>
@@ -101,7 +101,7 @@
         </button>
     </div>
 
-    <div class="grid-estructura" style="margin-top: 20px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+    <div class="grid-estructura" style="margin-top: 30px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
         <button @onclick="@(e => MostrarPatreon(e))" class="boton-pestañas">
             <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
                 <i class="fa-brands fa-patreon" style="font-size: 22px;"></i>
@@ -171,7 +171,7 @@
 @if (enseñarPestaña == true)
 {
     <div class="opciones-panel">
-        <div style="display: flex; align-items: start; margin: auto; justify-content: center; max-height: 100vh; min-width: 800px; max-width: 1000px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 40px; overflow-y: scroll; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
+        <div style="display: flex; align-items: start; margin: auto; justify-content: center; max-height: 100vh; min-width: 100vh; max-width: 1000px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 40px; overflow-y: scroll; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
             <button style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 8px 15px;" @onclick="ClickearCerrarPestaña">
                 <i class="fa-solid fa-arrow-left" style="font-size: 30px;"></i>
             </button>
