--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -16,36 +16,36 @@
 
 <style>
 	.deseado-imagen {
-		min-width: 223px;
+	width: 26%;
 	}
 
 	@@media (max-width: 800px) {
-		.deseado-imagen {
-			display: none;
-		}
+	.deseado-imagen {
+	display: none;
+	}
 	}
 </style>
 
 <style>
 	.cargando {
-		width: 48px;
-		height: 48px;
-		border: 5px solid var(--colorTexto);
-		border-bottom-color: transparent;
-		border-radius: 50%;
-		display: inline-block;
-		box-sizing: border-box;
-		animation: rotation 1s linear infinite;
+	width: 48px;
+	height: 48px;
+	border: 5px solid var(--colorTexto);
+	border-bottom-color: transparent;
+	border-radius: 50%;
+	display: inline-block;
+	box-sizing: border-box;
+	animation: rotation 1s linear infinite;
 	}
 
 	@@keyframes rotation {
-		0% {
-			transform: rotate(0deg);
-		}
+	0% {
+	transform: rotate(0deg);
+	}
 
-		100% {
-			transform: rotate(360deg);
-		}
+	100% {
+	transform: rotate(360deg);
+	}
 	}
 </style>
 
@@ -84,10 +84,10 @@
 						</div>
 					</div>
 
-					<div style="display: flex; align-items: center; width: 100%; margin: 15px 0px;">
-						<input type="text" @onchange="(e => TextoCambiaBusqueda(e))" class="entrada-texto" style="flex: 1; margin-right: 30px; min-width: 150px;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Wishlist")" />
+					<div style="display: flex; align-items: center; gap: 30px; width: 100%; margin: 15px 0px 25px 0px; background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+						<input type="text" @onchange="(e => TextoCambiaBusqueda(e))" class="entrada-texto" style="flex: 1; min-width: 150px;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Wishlist")" />
 
-						<button class="boton-pequeño" @onclick="EnseñarFiltrado" style="width: auto; padding: 10px 15px; margin-right: 30px; border: 0px; color: var(--colorTextoVisitado);">
+						<button class="boton-pequeño" @onclick="EnseñarFiltrado" style="width: auto; padding: 10px 15px; border: 0px; color: var(--colorTextoVisitado);">
 							@Herramientas.Idiomas.BuscarTexto(idioma, "String12", "Wishlist")
 						</button>
 
@@ -131,21 +131,25 @@
 					</div>
 				</div>
 
-				<hr />
-
 				@if (deseadosMostrar.Count > 0)
 				{
 					<Virtualize Context="juego" Items="deseadosMostrar" ItemSize="alturaFila">
 						<ItemContent>
 							<div style="margin: 20px 0px;">
 								<a class="boton-pequeño" style="padding: 2px;" href="@Herramientas.EnlaceAcortador.Generar(juego.Precio.Enlace, juego.Precio.Tienda, usuarioPatreon)" target="_blank">
-									<div style="display: flex; align-items: center;">
+									<div style="display: flex; align-items: stretch; justify-content: center; flex-direction: row;">
 										<div class="deseado-imagen">
-											<img src="@juego.Imagen" style="height: 100%; width: 100%;" />
+											@{
+												string imagen = juego.Imagen;
+
+												imagen = imagen.Replace("_glx_logo", null);
+											}
+
+											<img src="@imagen" style="height: 100%; width: 100%;" />
 										</div>
 
 										<div style="width: 100%; padding: 5px 20px;">
-											<div>@juego.Nombre</div>
+											<div style="margin-top: 5px;">@juego.Nombre</div>
 
 											<div style="display: flex; align-items: center; margin-top: 5px;">
 												<div style="width: 20px; height: 20px;">
@@ -186,13 +190,13 @@
 
 											@if (juego.Historico == true)
 											{
-												<div style="text-align: center; font-size: 14px; padding: 5px 15px; background-color: var(--fondoAlerta); margin-right: 3px;">
+												<div style="text-align: center; font-size: 14px; padding: 5px 15px; background-color: var(--fondoAlerta);">
 													@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Wishlist")
 												</div>
 											}
 											else
 											{
-												<div style="text-align: center; font-size: 14px; padding: 5px; background-color: var(--fondoOscuro); margin-right: 3px;">
+												<div style="text-align: center; font-size: 14px; padding: 5px; background-color: var(--fondoOscuro);">
 													@juego.HistoricoPrecio
 												</div>
 											}
@@ -296,6 +300,7 @@
 	private List<JuegoDeseadoMostrar> deseadosMostrar = new List<JuegoDeseadoMostrar>();
 	private List<string> deseadosSteam = new List<string>();
 	private List<JuegoDeseado> deseadosWeb = new List<JuegoDeseado>();
+	private List<string> deseadosGog = new List<string>();
 
 	private int cantidadMinimos = 0;
 	private string ordenamientoElegido = string.Empty;
@@ -430,6 +435,35 @@
 
 			#endregion
 
+			#region Deseados GOG
+
+			if (string.IsNullOrEmpty(usuario.GogWishlist) == false)
+			{
+				deseadosGog = Herramientas.Listados.Generar(usuario.GogWishlist);
+			}
+
+			if (deseadosGog.Count > 0)
+			{
+				List<Juegos.Juego> juegos = BaseDatos.Juegos.Buscar.MultiplesJuegosGOG(deseadosGog);
+
+				if (juegos != null)
+				{
+					int i = 0;
+
+					foreach (var juego in juegos)
+					{
+						i += 1;
+
+						if (juego != null)
+						{
+							AñadirJuegoMostrar(juego, JuegoDRM.GOG);
+						}
+					}
+				}
+			}
+
+			#endregion
+
 			if (deseadosGestor != null)
 			{
 				if (deseadosGestor.Count > 0)
@@ -459,27 +493,126 @@
 
 	private void AñadirJuegoMostrar(Juegos.Juego juego, JuegoDRM drm)
 	{
-		bool añadido = false;
+		bool yaEsta = false;
 
-		if (juego.PrecioMinimosHistoricos != null)
+		if (deseadosGestor.Count > 0)
 		{
-			if (juego.PrecioMinimosHistoricos.Count > 0)
+			foreach (var deseado in deseadosGestor)
 			{
-				foreach (var historico in juego.PrecioMinimosHistoricos)
+				if (deseado.Id == juego.Id && deseado.DRM == drm)
 				{
-					if (historico.DRM == drm)
-					{
-						TimeSpan actualizado = DateTime.Now.Subtract(historico.FechaActualizacion);
+					yaEsta = true;
+					break;
+				}
+			}
+		}
 
-						if (actualizado.Days == 0)
+		if (yaEsta == false)
+		{
+			bool añadido = false;
+
+			if (juego.PrecioMinimosHistoricos != null)
+			{
+				if (juego.PrecioMinimosHistoricos.Count > 0)
+				{
+					foreach (var historico in juego.PrecioMinimosHistoricos)
+					{
+						if (historico.DRM == drm)
+						{
+							TimeSpan actualizado = DateTime.Now.Subtract(historico.FechaActualizacion);
+
+							if (actualizado.Days == 0)
+							{
+								JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
+								nuevoDeseado.Id = juego.Id;
+								nuevoDeseado.Nombre = juego.Nombre;
+								nuevoDeseado.Imagen = juego.Imagenes.Header_460x215;
+								nuevoDeseado.DRM = drm;
+								nuevoDeseado.Precio = historico;
+								nuevoDeseado.Historico = true;
+
+								if (juego.Analisis != null)
+								{
+									nuevoDeseado.ReseñasPorcentaje = juego.Analisis.Porcentaje.Replace("%", null);
+									nuevoDeseado.ReseñasCantidad = juego.Analisis.Cantidad.Replace(",", null);
+								}
+								else
+								{
+									nuevoDeseado.ReseñasPorcentaje = "0";
+									nuevoDeseado.ReseñasCantidad = "0";
+								}
+
+								if (juego.Bundles != null)
+								{
+									nuevoDeseado.CantidadBundles = juego.Bundles.Count;
+								}
+
+								if (juego.Gratis != null)
+								{
+									nuevoDeseado.CantidadGratis = juego.Gratis.Count;
+								}
+
+								if (juego.Suscripciones != null)
+								{
+									nuevoDeseado.CantidadSuscripciones = juego.Suscripciones.Count;
+								}
+
+								deseadosGestor.Add(nuevoDeseado);
+								cantidadMinimos = cantidadMinimos + 1;
+								añadido = true;
+							}
+
+							break;
+						}
+					}
+				}
+			}
+
+			if (añadido == false)
+			{
+				if (juego.PrecioActualesTiendas != null)
+				{
+					if (juego.PrecioActualesTiendas.Count > 0)
+					{
+						JuegoPrecio precioFinal = null;
+						decimal precioReferencia = 1000000;
+
+						foreach (var actual in juego.PrecioActualesTiendas)
+						{
+							if (actual.DRM == drm)
+							{
+								TimeSpan actualizado = DateTime.Now.Subtract(actual.FechaActualizacion);
+
+								if (actualizado.Days == 0)
+								{
+									decimal tempPrecio = actual.Precio;
+
+									if (actual.Moneda != Herramientas.JuegoMoneda.Euro)
+									{
+										tempPrecio = Herramientas.Divisas.Cambio(tempPrecio, actual.Moneda);
+									}
+
+									if (precioReferencia > tempPrecio)
+									{
+										precioReferencia = tempPrecio;
+										precioFinal = actual;
+										precioFinal.Precio = precioReferencia;
+										break;
+									}
+								}
+							}
+						}
+
+						if (precioFinal != null)
 						{
 							JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
 							nuevoDeseado.Id = juego.Id;
 							nuevoDeseado.Nombre = juego.Nombre;
-							nuevoDeseado.Imagen = juego.Imagenes.Capsule_231x87;
+							nuevoDeseado.Imagen = juego.Imagenes.Header_460x215;
 							nuevoDeseado.DRM = drm;
-							nuevoDeseado.Precio = historico;
-							nuevoDeseado.Historico = true;
+							nuevoDeseado.Precio = precioFinal;
+							nuevoDeseado.Historico = false;
+							nuevoDeseado.HistoricoPrecio = MensajeMinimo(SacarMinimo(juego, drm), false);
 
 							if (juego.Analisis != null)
 							{
@@ -508,89 +641,7 @@
 							}
 
 							deseadosGestor.Add(nuevoDeseado);
-							cantidadMinimos = cantidadMinimos + 1;
-							añadido = true;
 						}
-
-						break;
-					}
-				}
-			}
-		}
-
-		if (añadido == false)
-		{
-			if (juego.PrecioActualesTiendas != null)
-			{
-				if (juego.PrecioActualesTiendas.Count > 0)
-				{
-					JuegoPrecio precioFinal = null;
-					decimal precioReferencia = 1000000;
-
-					foreach (var actual in juego.PrecioActualesTiendas)
-					{
-						if (actual.DRM == drm)
-						{
-							TimeSpan actualizado = DateTime.Now.Subtract(actual.FechaActualizacion);
-
-							if (actualizado.Days == 0)
-							{
-								decimal tempPrecio = actual.Precio;
-
-								if (actual.Moneda != Herramientas.JuegoMoneda.Euro)
-								{
-									tempPrecio = Herramientas.Divisas.Cambio(tempPrecio, actual.Moneda);
-								}
-
-								if (precioReferencia > tempPrecio)
-								{
-									precioReferencia = tempPrecio;
-									precioFinal = actual;
-									precioFinal.Precio = precioReferencia;
-									break;
-								}
-							}
-						}
-					}
-
-					if (precioFinal != null)
-					{
-						JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
-						nuevoDeseado.Id = juego.Id;
-						nuevoDeseado.Nombre = juego.Nombre;
-						nuevoDeseado.Imagen = juego.Imagenes.Capsule_231x87;
-						nuevoDeseado.DRM = drm;
-						nuevoDeseado.Precio = precioFinal;
-						nuevoDeseado.Historico = false;
-						nuevoDeseado.HistoricoPrecio = MensajeMinimo(SacarMinimo(juego, drm), false);
-
-						if (juego.Analisis != null)
-						{
-							nuevoDeseado.ReseñasPorcentaje = juego.Analisis.Porcentaje.Replace("%", null);
-							nuevoDeseado.ReseñasCantidad = juego.Analisis.Cantidad.Replace(",", null);
-						}
-						else
-						{
-							nuevoDeseado.ReseñasPorcentaje = "0";
-							nuevoDeseado.ReseñasCantidad = "0";
-						}
-
-						if (juego.Bundles != null)
-						{
-							nuevoDeseado.CantidadBundles = juego.Bundles.Count;
-						}
-
-						if (juego.Gratis != null)
-						{
-							nuevoDeseado.CantidadGratis = juego.Gratis.Count;
-						}
-
-						if (juego.Suscripciones != null)
-						{
-							nuevoDeseado.CantidadSuscripciones = juego.Suscripciones.Count;
-						}
-
-						deseadosGestor.Add(nuevoDeseado);
 					}
 				}
 			}
