--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -12,102 +12,102 @@
 
 <style>
 	.destacado-fondo {
-		display: block;
+	display: block;
 	}
 
 	.destacado-video {
-		display: none;
+	display: none;
 	}
 
 	.destacado-mostrar:hover .destacado-fondo {
-		display: none;
+	display: none;
 	}
 
 	.destacado-mostrar:hover .destacado-video {
-		display: block;
+	display: block;
 	}
 
 	.destacados-galeria-cursor {
-		cursor: pointer;
+	cursor: pointer;
 	}
 
 	.destacados-galeria-fila {
-		display: flex;
-		overflow: auto;
+	display: flex;
+	overflow: auto;
 	}
 
-		.destacados-galeria-fila:after {
-			content: "";
-			display: table;
-			clear: both;
-		}
+	.destacados-galeria-fila:after {
+	content: "";
+	display: table;
+	clear: both;
+	}
 
 	.destacados-galeria-columna {
-		float: left;
-		width: 16.66%;
-		flex: 0 0 auto;
-		padding: 3px 3px 0px 3px;
-		aspect-ratio: 92/43;
+	float: left;
+	width: 16.66%;
+	flex: 0 0 auto;
+	padding: 3px 3px 0px 3px;
+	aspect-ratio: 92/43;
 	}
 
 	.destacados-galeria-captura {
-		opacity: 0.3;
-		object-fit: cover;
-		overflow: hidden;
-		transition: transform .2s;
+	opacity: 0.3;
+	object-fit: cover;
+	overflow: hidden;
+	transition: transform .2s;
 	}
 
-		.destacados-galeria-captura:hover {
-			opacity: 1;
-			transform: scale(1.01);
-		}
+	.destacados-galeria-captura:hover {
+	opacity: 1;
+	transform: scale(1.01);
+	}
 
 	.destacado-hueco {
-		padding: 80px 60px 30px 60px;
+	padding: 80px 60px 30px 60px;
 	}
 
 	.destacado-logo-medidas {
-		max-width: 250px;
-		max-height: 200px;
+	max-width: 250px;
+	max-height: 200px;
 	}
 
 	.destacado-logo-alto {
-		height: 150px;
+	height: 150px;
 	}
 
 	.destacado-precio-descuento {
-		padding: 12px 15px;
-		font-size: 22px;
+	padding: 12px 15px;
+	font-size: 22px;
 	}
 
 	.destacado-icono {
-		width: 40px;
-		height: 40px;
+	width: 40px;
+	height: 40px;
 	}
 
 	@@media (max-width: 800px) {
-		.destacado-hueco {
-			padding: 40px 30px 15px 30px;
-		}
+	.destacado-hueco {
+	padding: 40px 30px 15px 30px;
+	}
 
-		.destacado-logo-medidas {
-			max-width: 150px;
-			max-height: 120px;
-		}
+	.destacado-logo-medidas {
+	max-width: 150px;
+	max-height: 120px;
+	}
 
-		.destacado-logo-alto {
-			height: 100px;
-		}
+	.destacado-logo-alto {
+	height: 100px;
+	}
 
-		.destacado-precio-descuento {
-			padding: 6px 8px;
-			font-size: 15px;
-		}
+	.destacado-precio-descuento {
+	padding: 6px 8px;
+	font-size: 15px;
+	}
 
-		.destacado-icono {
-			width: 24px;
-			height: 24px;
-		}
+	.destacado-icono {
+	width: 24px;
+	height: 24px;
+	}
 	}
 </style>
 
@@ -122,12 +122,14 @@
 			{
 				colorSeleccionado = "var(--fondoBien)";
 			}
-
-			if (Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juegoSeleccionado, juegoSeleccionado.PrecioMinimosHistoricos[0].DRM, true) == true)
+			else
 			{
-				colorSeleccionado = "var(--fondoAlerta)";
+				if (Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juegoSeleccionado, juegoSeleccionado.PrecioMinimosHistoricos[0].DRM, true) == true)
+				{
+					colorSeleccionado = "var(--fondoAlerta)";
+				}
 			}
-
+			
 			<a href="/game/@juegoSeleccionado.IdMaestra.ToString()/@Herramientas.EnlaceAdaptador.Nombre(juegoSeleccionado.Nombre)/" style="cursor: pointer; border: 0px; padding: 0px; display: block; width: 100%;">
 				<div style="position: relative; padding: 3px; background-color: @colorSeleccionado;">
 					<div class="destacado-mostrar">
@@ -224,10 +226,12 @@
 				{
 					fondoDestacado = "background-color: var(--fondoBien);";
 				}
-
-				if (Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, destacado, destacado.PrecioMinimosHistoricos[0].DRM, true) == true)
+				else
 				{
-					fondoDestacado = "background-color: var(--fondoAlerta);";
+					if (Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, destacado, destacado.PrecioMinimosHistoricos[0].DRM, true) == true)
+					{
+						fondoDestacado = "background-color: var(--fondoAlerta);";
+					}
 				}
 
 				<div class="destacados-galeria-columna" @onclick="@(e => CambiarJuegoDestacado(e, destacado))" style="@fondoDestacado">
@@ -249,39 +253,39 @@
 
 <style>
 	.noticias-caja {
-		padding: 30px;
+	padding: 30px;
 	}
 
 	.noticia-ancho {
-		width: calc(33% - 16px);
+	width: calc(33% - 16px);
 	}
 
 	.noticia-expandir {
-		transition: transform .2s;
+	transition: transform .2s;
 	}
 
-		.noticia-expandir:hover {
-			transform: scale(1.01);
-		}
+	.noticia-expandir:hover {
+	transform: scale(1.01);
+	}
 
 	.noticia-enlaces {
-		flex-direction: row;
-		gap: 80px;
+	flex-direction: row;
+	gap: 80px;
 	}
 
 	@@media (max-width: 800px) {
-		.noticias-caja {
-			padding: 15px;
-		}
+	.noticias-caja {
+	padding: 15px;
+	}
 
-		.noticia-enlaces {
-			flex-direction: column;
-			gap: 30px;
-		}
+	.noticia-enlaces {
+	flex-direction: column;
+	gap: 30px;
+	}
 
-		.noticia-ancho {
-			width: calc(50% - 16px);
-		}
+	.noticia-ancho {
+	width: calc(50% - 16px);
+	}
 	}
 </style>
 
@@ -435,10 +439,10 @@ else
 			</Virtualize>
 		</div>
 
-		<div style="margin-bottom: 20px; margin-left: auto; margin-right: auto; width: 400px;">
-			<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/historical-lows">
+		<div style="margin-bottom: 20px; width: 100%; display: inline-grid;">
+			<button class="boton-pequeño" @onclick="CargarMasMinimos" style="width: fit-content; margin-left: auto; margin-right: auto; padding: 15px 50px; font-size: 17px; text-align: center;">
 				@Herramientas.Idiomas.BuscarTexto(idioma, "LastLowsMore", "Index")
-			</a>
+			</button>
 		</div>
 	</div>	
 }
@@ -724,6 +728,8 @@ else
 
 	#region Minimos Lista
 
+	private int cantidadJuegosMinimos = 100;
+
 	private void GenerarListaMinimos()
 	{
 		try
@@ -760,12 +766,22 @@ else
 				}
 			}
 
-			juegosMinimosGestor = BaseDatos.Portada.Buscar.UltimosMinimos(100, categoriasNumeros, drmsNumeros, conexion, 199);
+			juegosMinimosGestor = BaseDatos.Portada.Buscar.UltimosMinimos(cantidadJuegosMinimos, categoriasNumeros, drmsNumeros, conexion, 199);
 		}
 		catch (Exception ex)
 		{
 			BaseDatos.Errores.Insertar.Mensaje("Portada Minimos", ex);
 		}
+	}
+
+	private void CargarMasMinimos()
+	{
+		if (cantidadJuegosMinimos <= 450)
+		{
+			cantidadJuegosMinimos += 50;
+		}
+
+		Filtros();
 	}
 
 	#endregion
