--- a/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
@@ -49,7 +49,7 @@
 		{
 			<div style="width: 100%; display: flex; flex-direction: column; gap: 20px;">
 				<div style="display: flex; align-items: center; gap: 20px;">
-					<label style="width: 100%; font-size: 20px;">@string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String1", "PatreonStore"), usuario.PatreonCoins.ToString())</label>
+					<label style="width: 100%; font-size: 20px;">@string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String1", "PatreonStore"), usuario?.PatreonCoins.ToString())</label>
 
 					<button @onclick="@(e => MostrarHistorial(e))" class="boton-pequeño" style="width: fit-content; padding: 8px 12px;">
 						@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "PatreonStore")
@@ -58,7 +58,7 @@
 
 				<hr style="margin: 1px 0px;" />
 
-				@if (usuario.PatreonCoins >= 30)
+				@if (usuario?.PatreonCoins >= 30)
 				{
 					<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px, 40px; display: flex; align-items: center; gap: 20px;">
 						<i style="font-size: 25px;" class="fa-solid fa-circle-exclamation"></i>
