--- a/pepeizqs deals web/Pages/last-news.cshtml
+++ b/pepeizqs deals web/Pages/last-news.cshtml
@@ -7,5 +7,5 @@
 }
 
 @(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.Server, new { 
-	idioma = @Model.idioma 
+	idioma = Model.idioma 
 }))
