--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -3,16 +3,16 @@
         pepeizqdeals.com
     </div>
 
-    <div style="display: flex; align-items: center; margin-top: 20px;">
-        <div style="margin-right: 20px;">
+    <div style="display: flex; align-items: center; gap: 20px; margin-top: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://win6052.site4now.net/stats/awstats.pl?config=1112749300&h=8d43503475c9993340908170c2f4b9da" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Smarterasp</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://search.google.com/search-console?resource_id=sc-domain:pepeizqdeals.com" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Google</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://www.bing.com/webmasters/home?siteUrl=https://pepeizqdeals.com/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Bing</a>
         </div>
     </div>
@@ -23,20 +23,16 @@
         pepeizqapps.com
     </div>
 
-    <div style="display: flex; align-items: center; margin-top: 20px;">
-        <div style="margin-right: 20px;">
+    <div style="display: flex; align-items: center; gap: 20px; margin-top: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://win6052.site4now.net/stats/awstats.pl?config=1112749301&h=247c8c635b3636dbad356b8bfe410387" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Smarterasp</a>
         </div>
 
-        <div style="margin-right: 20px;">
-            <a class="boton-pequeño" href="https://dash.cloudflare.com/a419bd795a2aa4915b886e422f16c484/pepeizqapps.com/analytics/traffic" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Cloudflare</a>
-        </div>
-
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://search.google.com/search-console?resource_id=sc-domain:pepeizqapps.com" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Google</a>
         </div>
 
-        <div style="margin-right: 20px;">
+        <div>
             <a class="boton-pequeño" href="https://www.bing.com/webmasters/home?siteUrl=https://pepeizqapps.com/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Bing</a>
         </div>
     </div>
